--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   mongodbcontainer:
-    image: mongo
+    image: mongo:7.0
     ports:
       - 27017:27017
     volumes:
