--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.1",
     "normalize.css": "^8.0.1",
     "react": "^18",
+    "react-csv": "^2.2.2",
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
     "sass": "^1.75.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "@types/three": "^0.163.0",
     "eslint": "^8",
